fix for validation job to finish and not stay in progress