@@ -1897,8 +1897,8 @@ public class ValidationHelper implements DisposableBean {
   private void checkAndPromoteFolder(S3PathResolver s3PathResolver, DataFlowVO dataflow) throws EEAException {
     if (dataflow.getBigData()!=null && dataflow.getBigData()) {
       final String preparationCode = s3PathResolver.getPreparationCode();
-      final String validationTablePath = preparationCode.isBlank() ? S3_VALIDATION_TABLE_PATH : S3_PREPARATION_VALIDATION_TABLE_PATH;
-      final String validationFolderPath = preparationCode.isBlank() ? S3_TABLE_AS_FOLDER_QUERY_PATH : S3_PREPARATION_TABLE_AS_FOLDER_QUERY_PATH;
+      final String validationTablePath = StringUtils.isBlank(preparationCode) ? S3_VALIDATION_TABLE_PATH : S3_PREPARATION_VALIDATION_TABLE_PATH;
+      final String validationFolderPath = StringUtils.isBlank(preparationCode) ? S3_TABLE_AS_FOLDER_QUERY_PATH : S3_PREPARATION_TABLE_AS_FOLDER_QUERY_PATH;
       if (s3Helper.checkFolderExist(s3PathResolver, validationTablePath)) {
         try {
           String validateTable = s3Helper.getS3Service().getTableAsFolderQueryPath(s3PathResolver, S3_TABLE_AS_FOLDER_QUERY_PATH);
